# projectv3

./: .env.example  .gitignore  README.md  SMALLREADME.md  __init__.py  build_db.py  config.py  config.yaml  pyproject.toml
agent/: __init__.py
cli/: __init__.py  main.py
data/: ships.csv
database/: __init__.py
pipeline/: __init__.py  __main__.py  agent_inference.py  cli.py  demo.py  detector.py  fps.py  output.py  pipeline.py  tracker.py  video_input.py
tests/: test_database.py  test_pipeline.py
tools/: __init__.py
