[project]
name = "ship-hull-agent"
version = "0.2.0"
description = "船弦号识别 Agent — 精确匹配 + FAISS 语义检索（RAG）"
requires-python = ">=3.10"
dependencies = [
    "langchain-core>=0.3.0",
    "langchain-openai>=0.3.0",
    "langchain-community>=0.4.0",
    "langgraph>=0.3.0",
    "numpy>=1.24",
    "faiss-cpu>=1.7",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
ship-hull = "cli.main:app"
ship-build-db = "build_db:main"

[tool.setuptools.packages.find]
include = ["database*", "tools*", "agent*", "cli*", "config*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
